--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ subtitle:
 description:
 author: zhangjx978
 language: zh-Hans
-timezone:
+timezone: Asia/Shanghai
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
