--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
 # OS X
 .DS_Store*
 Icon?
-._*
 
 # Windows
 Thumbs.db
@@ -29,6 +28,7 @@ node_modules
 *.log.*
 *.out
 
-# public
+# hexo
 public/
 db.json
+.deploy*/
